# JupyterEnvForCudaOnWSL2

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  run.sh
Workspace/: Sample.ipynb
